# wreq-util

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.ps1  build.sh  release-plz.toml  test.ps1  test.sh
.github/workflows/: build.yml  ci.yml  release-plz.yml
examples/: cookie.rs  emulate.rs  emulation.rs  middleware_delay.rs  middleware_jitter_delay.rs  tower_delay.rs  tower_jitter_delay.rs
src/: cookie.rs  emulate.rs  emulation.rs  lib.rs  middleware.rs  rand.rs  tower.rs
src/emulate/: compress.rs  macros.rs  profile.rs  rand.rs  wtf_hash.rs
src/emulate/device/: macros.rs
src/emulate/profile/: chrome.rs  firefox.rs  macros.rs  okhttp.rs  opera.rs  safari.rs
src/emulate/profile/chrome/: header.rs  tls.rs
src/emulate/profile/firefox/: header.rs  tls.rs
src/emulate/profile/opera/: header.rs  tls.rs
src/emulate/profile/safari/: header.rs  tls.rs
src/emulation/: certificate.rs  compress.rs  device.rs  mod.rs
src/emulation/device/: chrome.rs  firefox.rs  macros.rs  mod.rs  okhttp.rs  opera.rs  safari.rs
src/emulation/device/chrome/: http3.rs  mod.rs  tls.rs
src/emulation/device/firefox/: mod.rs  tls.rs
src/emulation/device/opera/: header.rs  tls.rs
src/emulation/device/safari/: header.rs  mod.rs  tls.rs
src/middleware/: delay.rs
src/middleware/delay/: layer.rs
src/tower/: delay.rs
src/tower/delay/: future.rs  layer.rs
tests/: client.rs  compress.rs  emulate_chrome.rs  emulate_firefox.rs  emulate_okhttp.rs  emulate_opera.rs  emulate_safari.rs  emulation_chrome.rs  emulation_firefox.rs  emulation_okhttp.rs  emulation_safari.rs  evri.rs  proxy.rs
tests/support/: mod.rs
